Began setting up the UI: main menu created, buttons link to other pages. Other pages currently empty.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ShoppingList</string>
+    <string name="home">Home</string>
+    <string name="Unexpected_val">\"Unexpected value: \"</string>
+    <string name="categories">Categories</string>
+    <string name="shopping_lists">Shopping lists</string>
 </resources>
