Following Ahmed's lead from the ShoppingListsActivity to add UI elements and data persistence to the CategoriesActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="Unexpected_val">\"Unexpected value: \"</string>
     <string name="categories">Categories</string>
     <string name="shopping_lists">Shopping lists</string>
+    <string name="clickToReturn">Return</string>
 </resources>
