Lots of changes
Finished all DB queries.
Finished categories screen including update and delete methods.
Added 3 color schemes with the ability to add many more.
Created a new Category adapter
Removed Marks Room files since they are unneeded in this branch.
Maybe some other things but It has been a long day.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="categories">Categories</string>
     <string name="shopping_lists">Shopping lists</string>
     <string name="clickToReturn">Return</string>
+    
+    <string-array name="color_names">
+        <item>Yellow and Red</item>
+        <item>Black and Yellow</item>
+        <item>Purple and Pink</item>
+    </string-array>
+
+    <string-array name="color_values">
+        <item name ="Yellow and Red">#FCE77D #F96167</item>
+        <item name ="Black and Yellow">#292826 #F9D342</item>
+        <item name ="Purple and Pink">#3D155F #DF678C</item>
+    </string-array>
 </resources>
