--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,16 +5,24 @@
     <string name="categories">Categories</string>
     <string name="shopping_lists">Shopping lists</string>
     <string name="clickToReturn">Return</string>
-    
+
     <string-array name="color_names">
-        <item>Yellow and Red</item>
-        <item>Black and Yellow</item>
-        <item>Purple and Pink</item>
+        <item>Red theme</item>
+        <item>Green theme</item>
+        <item>Blue theme</item>
+        <item>Orange theme</item>
+        <item>Yellow theme</item>
+        <item>Purple theme</item>
+        <item>Pink theme</item>
     </string-array>
 
     <string-array name="color_values">
-        <item name ="Yellow and Red">#FCE77D #F96167</item>
-        <item name ="Black and Yellow">#292826 #F9D342</item>
-        <item name ="Purple and Pink">#3D155F #DF678C</item>
+        <item name ="Red theme">#FF6666 #AA0000</item>
+        <item name ="Green theme">#BBF0BB #00AA00</item>
+        <item name ="Blue theme">#AAAAF0 #0000FF</item>
+        <item name ="Orange theme">#FFA75D #C05000</item>
+        <item name ="Yellow theme">#FFFF20 #A0A000</item>
+        <item name ="Purple theme">#A545FF #3D155F</item>
+        <item name ="Pink theme">#FF80FF #C000C0</item>
     </string-array>
 </resources>
